# dm_db

./: CMakeLists.txt  README.md
include/: db_type.h  db_type.hpp  dict.h  dm_malloc.h  f_macros.h  math.h
src/: ad_list.c  dict.c  dm_main.cpp
utils/: math.cpp
